small changes in section 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -22,30 +25,19 @@
         </nav>
     </header>
     <main>
-         <!-- Section One -->
-         <section class="section-one">
-            <div class="row">
-                <div class="cols">
-                    <h3 class="main-title">Shooting Stars</h3>
-                    <p class="main-info">Hello, I’m Bakhtiyar Sattarov,
-                        <span>product designer</span> with experience in studios and startups</p>
-                </div>
-                <div class="sub-dialogue">
-                    <hr>
-                    <p>Design is about progress</p>
-                </div>
+        <!-- section 1 -->
+        <div class="container-1">
+            <div class="main-title">
+                <h3 class="main-text">Shooting Stars</h3>
+                <h1 class="main-info">Hello, Im Bakhtiyar Sattarov, <a href="./projects.html">product designer</a> with experience in studios and startups</h1>
             </div>
-        </section>
-
-         <!-- Section Two -->
-         <div class="section-two">
-            <div class="container">
-                
+            <div class="progress">
+                <p>__</p>
+                <p>Design is about progress</p>
             </div>
         </div>
-
-
-
-    </main>
+    </main>     
 </body>
 </html>
+       
+  
