--- a/index.html
+++ b/index.html
@@ -29,11 +29,50 @@
         <div class="container-1">
             <div class="main-title">
                 <h3 class="main-text">Shooting Stars</h3>
-                <h1 class="main-info">Hello, Im Bakhtiyar Sattarov, <a href="./projects.html">product designer</a> with experience in studios and startups</h1>
+                <h1 class="main-info">Hello, I'm Bakhtiyar Sattarov, <a href="./projects.html">product designer</a> with experience in studios and startups</h1>
             </div>
             <div class="progress">
                 <p>__</p>
                 <p>Design is about progress</p>
+            </div>
+        </div>
+        <!-- Section 2 -->
+        <div class="container_2">
+            <div class="grid_element first">
+                <img src="./images/img1.png" alt="Dancer">
+            </div>
+            <div class="grid_element second">
+                <img src="./images/img2.png" alt="Face">
+            </div>
+            <div class="grid_element third">
+                <img src="./images/img3.png" alt="Flower face">
+            </div>
+            <div class="grid_element fourth">
+                <img src="./images/img4.png" alt="Ballon">
+            </div>
+            <div class="grid_element fifth">
+                <img src="./images/img5.png" alt="Liberty">
+            </div>
+            <div class="grid_element sixth">
+                <img src="./images/img6.png" alt="Face-paint">
+            </div>
+            <div class="grid_element seventh">
+                <img src="./images/img7.png" alt="Glowing nun">
+            </div>
+            <div class="grid_element eight">
+                <img src="./images/img8.png" alt="Girl with ballons">
+            </div>
+            <div class="grid_element ninth">
+                <img src="./images/img9.png" alt="Piano">
+            </div>
+            <div class="grid_element tenth">
+                <img src="./images/img10.png" alt="Sunset">
+            </div>
+            <div class="grid_element eleventh">
+                <img src="./images/img11.png" alt="Desert">
+            </div>
+            <div class="grid_element twelwth">
+                <img src="./images/img12.png" alt="Forest">
             </div>
         </div>
     </main>     
