--- a/index.html
+++ b/index.html
@@ -37,44 +37,66 @@
             </div>
         </div>
         <!-- Section 2 -->
-        <div class="container_2">
-            <div class="grid_element first">
+        <div class="container-2">
+            <div class="grid-element first">
                 <img src="./images/img1.png" alt="Dancer">
             </div>
-            <div class="grid_element second">
+            <div class="grid-element second">
                 <img src="./images/img2.png" alt="Face">
             </div>
-            <div class="grid_element third">
+            <div class="grid-element third">
                 <img src="./images/img3.png" alt="Flower face">
             </div>
-            <div class="grid_element fourth">
+            <div class="grid-element fourth">
                 <img src="./images/img4.png" alt="Ballon">
             </div>
-            <div class="grid_element fifth">
+            <div class="grid-element fifth">
                 <img src="./images/img5.png" alt="Liberty">
             </div>
-            <div class="grid_element sixth">
+            <div class="grid-element sixth">
                 <img src="./images/img6.png" alt="Face-paint">
             </div>
             <div class="grid_element seventh">
                 <img src="./images/img7.png" alt="Glowing nun">
             </div>
-            <div class="grid_element eight">
+            <div class="grid-element eight">
                 <img src="./images/img8.png" alt="Girl with ballons">
             </div>
-            <div class="grid_element ninth">
+            <div class="grid-element ninth">
                 <img src="./images/img9.png" alt="Piano">
             </div>
-            <div class="grid_element tenth">
+            <div class="grid-element tenth">
                 <img src="./images/img10.png" alt="Sunset">
             </div>
-            <div class="grid_element eleventh">
+            <div class="grid-element eleventh">
                 <img src="./images/img11.png" alt="Desert">
             </div>
-            <div class="grid_element twelwth">
+            <div class="grid-element twelwth">
                 <img src="./images/img12.png" alt="Forest">
             </div>
         </div>
+        <!-- section 3 -->
+        <div class="container-3">
+            <div class="grid-element text1">
+                <h2>We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details</h2>
+            </div>
+            <div class="grid-element list1">
+                <ul>
+                    <li>Multimedia</li>
+                    <li>Interactive Design</li>
+                    <li>Branding</li>
+                </ul>
+            </div>
+            <div class="grid-element list2">
+                <ul>
+                    <li>Creative design</li>
+                    <li>Packaging</li>
+                    <li>Coding</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <!-- section 4 -->
     </main>     
 </body>
 </html>
