--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
         </div>
         <hr>
         <!-- section 4 -->
+        <div class="container-4">
+            <!--row 1-->
+            <div class="grid-element awards">Awwwards</div>
+            <div class="grid-element site-day">Site of the day</div>
+            <div class="grid-element ui-kit">
+                Genesis UI Kit
+                <p>Application that helps to find nearest sport centres in your area</p>
+            </div>
+            <div class="grid-element year">2018</div>
+            <!-- row 2 -->
+            <div class="grid-element best-nav">Best navigation</div>
+            <div class="grid-element ui-template">
+                Genesis Template
+                <p>Application that helps to find nearest sport centres in your area</p>
+            </div>
+            <div class="grid-element year1">2018</div>
+        </div>
+        <hr class="line1">
+        <div class="container-4">
+            <!--row 1-->
+            <div class="grid-element awards">CSSDesignAwards</div>
+            <div class="grid-element site-day">Site of the day</div>
+            <div class="grid-element ui-kit">
+                Genesis UI Kit
+                <p>Application that helps to find nearest sport centres in your area</p>
+            </div>
+            <div class="grid-element year">2017</div>
+            <!-- row 2 -->
+            <div class="grid-element best-nav">Best navigation</div>
+            <div class="grid-element ui-template">
+                Genesis Template
+                <p>Application that helps to find nearest sport centres in your area</p>
+            </div>
+            <div class="grid-element year1">2016</div>
+        </div>
+        <hr class="line1">
     </main>     
 </body>
 </html>
