index.html completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Genesis</title>
 </head>
 <body>
     <header>
@@ -133,6 +133,22 @@
             <div class="grid-element year1">2016</div>
         </div>
         <hr class="line1">
+
+        <footer class="footer">
+                <div class="logo">
+                    <a href="index.html">
+                        <img src="images/logo.svg" alt="Logo">
+                    </a>
+                </div>
+                <div>
+                    <ul  class="nav-links">
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><img src="./images/icons.svg" alt="icons"></li>
+                    </ul>
+                </div>
+            
+        </footer>
     </main>     
 </body>
 </html>
