--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>  
             <!-- Links -->
             <ul  class="nav-links">
-                <li><a href="pages/project.html">Products</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="./pages/project.html">Products</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
