--- a/pages/project.html
+++ b/pages/project.html
@@ -19,8 +19,8 @@
             </div>  
             <!-- Links -->
             <ul  class="nav-links">
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./project.html">Products</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
