--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,8 +58,8 @@
         </div>
         <div>
             <ul  class="nav-links">
-                <li><a href="pages/project.html">Products</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="./project.html">Products</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><img src="../images/icons.svg" alt="icons"></li>
             </ul>
         </div>
