--- a/pages/project.html
+++ b/pages/project.html
@@ -19,8 +19,8 @@
             </div>  
             <!-- Links -->
             <ul  class="nav-links">
-                <li><a href="./project.html">Products</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="project.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -63,14 +63,14 @@
     </main>   
     <footer class="footer">
         <div class="logo">
-            <a href="index.html">
+            <a href="#home">
                 <img src="../images/logo.svg" alt="Logo">
             </a>
         </div>
         <div>
             <ul  class="nav-links">
-                <li><a href="pages/project.html">Products</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="project.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><img src="../images/icons.svg" alt="icons"></li>
             </ul>
         </div>
