--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar" id="home">
             <!-- Logo & BrandName -->
             <div class="logo" >
                 <img src="images/logo.svg" alt="Logo">
@@ -136,7 +136,7 @@
 
         <footer class="footer">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="#home">
                         <img src="images/logo.svg" alt="Logo">
                     </a>
                 </div>
